--- a/.env example
+++ b/.env example
@@ -6,6 +6,8 @@ L3_USER_NAME='your L3 Switch user name'
 L3_USER_PWD='your L3 Switch user password'
 L3_ENABLE_PWD='your L3 Switch enable password'
 
+L3_SWITCH_NAME = 'your L3 switch Name'
+
 # L2 setting
 L2_USER_NAME='your L2 Switch user name'
 L2_USER_PWD='your L2 Switch user password'
